[package]
name = "p2p_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "p2p_helper"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "p2pRunner"
path = "src/main.rs"

[dependencies]
libp2p = {version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "dns", "kad", "rsa", "identify"] }
pyo3 = { version = "0.20.2", features = ["extension-module", "generate-import-lib"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }

tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
anyhow = "1.0.75"
chrono = "0.4"
async-stream = "0.3.5"
lazy_static = "1.4.0"
multihash = "0.19.1"
base64 = "0.21.7"
